--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -8,6 +8,14 @@
   font-size: .8rem !important;
 }
 
+.txt-xs {
+  font-size: .65rem !important;
+}
+
+.position-relative {
+  position: relative !important;
+}
+
 th {
   font-weight: bold !important;
 }
