Implement sidebar in first step of transfer progress

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -16,6 +16,10 @@
   position: relative !important;
 }
 
+.text-nowrap {
+  white-space: nowrap !important;
+}
+
 th {
   font-weight: bold !important;
 }
