--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -46,3 +46,21 @@ th {
   padding: 1px 5px;
   background: #f5f5f5;
 }
+
+* {
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+    border-radius: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 6px;
+  }
+}
