--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -68,3 +68,13 @@ th {
 .text-danger {
   color: #ff0000;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
