Hide najva icon andd redirect in creation of pack

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -84,3 +84,7 @@ input[type='number'] {
 .text-left {
   text-align: left !important;
 }
+
+.najva-backdrop-container .najva-powered-by {
+  display: none !important;
+}
