Add some widgets
Resolve TF-783 - Add prescriptions widget
Resolve TF-784 - Add employment applications widget
Some polishes on stats widget component.

--- a/src/assets/scss/_widgets.scss
+++ b/src/assets/scss/_widgets.scss
@@ -3,30 +3,35 @@
 $radius: 1em;
 
 .statswidget-container {
-  cursor: pointer;
-  transition: $base-transition;
-  margin: .5em;
-  padding: 1em 2em .5em 1em;
-  max-width: 25em;
-  border: 1px solid #eee;
+  cursor       : pointer;
+  transition   : $base-transition;
+  padding      : .5em 2em 0em 1em;
+  max-width    : 25em;
+  border       : 1px solid #eee;
   border-radius: $radius;
+  height       : 8em;
+  overflow     : hidden;
+}
+
+.statswidget-grid-container {
+  height: 100%;
 }
 
 .statswidget-title {
   border-radius: $radius;
-  text-align: right;
-  margin-top: 0;
+  text-align   : right;
+  margin-top   : 0;
   margin-bottom: 1em !important;
-  font-size: 1.2em;
+  font-size    : 1.2em;
 }
 
 .statswidget-value {
   font-weight: bolder;
-  font-size: 3em;
+  font-size  : 3em;
 }
 
 .statswidget-icon {
-  display: flex;
+  display        : flex;
   justify-content: center;
-  align-items: center;
+  align-items    : center;
 }
