--- a/src/components/public/auto-complete/auto-complete.module.scss
+++ b/src/components/public/auto-complete/auto-complete.module.scss
@@ -28,12 +28,32 @@ $borderRadius: 4px;
 }
 
 .div-list {
+  width: 100%;
   position: absolute;
   background-color: #fff;
   border-radius: $borderRadius;
-  height: fit-content;
-  padding: 10px;
+  right: 0;
+  top: 40px;
+  padding: 5px;
+  border: 1px solid #d8d8d8;
+  z-index: 999;
+  // height: 30px;
+  max-height: 300px;
+  overflow-y: auto;
+  &.itself-space {
+    padding: 5px 10px;
+  }
   ul {
+    margin-top: 0;
+    padding-right: 0;
     list-style-type: none;
+    li {
+      cursor: pointer;
+      padding: 5px;
+      &:hover {
+        background-color: rgb(235, 235, 235);
+        transition: background-color 0.2s ease;
+      }
+    }
   }
 }
