Update user menu & blur event in autocomplete

--- a/src/components/public/auto-complete/auto-complete.module.scss
+++ b/src/components/public/auto-complete/auto-complete.module.scss
@@ -43,6 +43,7 @@ $borderRadius: 4px;
 .div-list {
   width: 100%;
   position: absolute;
+  white-space: break-spaces;
   background-color: #fff;
   border-radius: $borderRadius;
   right: 0;
