--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -45,28 +45,28 @@ th {
 }
 
 .selected-item {
-  box-shadow: 0 0px 2px inset;
+  box-shadow   : 0 0px 2px inset;
   border-radius: 5px;
-  padding: 1px 5px;
-  background: #f5f5f5;
+  padding      : 1px 5px;
+  background   : #f5f5f5;
 }
 
 @media screen and (min-width: 768px) {
   * {
     &::-webkit-scrollbar {
-      width: 10px;
+      width           : 10px;
       background-color: #f5f5f5;
-      border-radius: 4px;
+      border-radius   : 4px;
     }
 
     &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+      box-shadow   : inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
       border-radius: 6px;
     }
 
     &::-webkit-scrollbar-thumb {
       background-color: darkgrey;
-      border-radius: 6px;
+      border-radius   : 6px;
     }
   }
 }
@@ -78,7 +78,7 @@ th {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  margin: 0;
+  margin            : 0;
 }
 
 input[type='number'] {
@@ -91,4 +91,16 @@ input[type='number'] {
 
 .text-right {
   text-align: right !important;
+}
+
+.version-small {
+  color    : #aaa;
+  font-size: .6em;
+  padding  : 0 .5em;
+}
+
+@media (max-width: 600px) {
+  .version-small {
+    margin-right: -36px
+  }
 }
