Remove debugger, small fix in css

--- a/src/assets/scss/_widgets.scss
+++ b/src/assets/scss/_widgets.scss
@@ -10,6 +10,10 @@ $radius: 1em;
   border-radius: $radius;
   height       : 8em;
   overflow     : hidden;
+
+  &:hover {
+    filter: contrast(1.5);
+  }
 }
 
 .statswidget-grid-container {
