Add exit btn in 401

--- a/src/assets/scss/_error.scss
+++ b/src/assets/scss/_error.scss
@@ -30,6 +30,11 @@
     cursor       : pointer;
     box-shadow   : 1px 1px 5px #ccc;
     transition   : all .4s ease-in-out;
+
+    &:hover {
+      color: white;
+      background: #888;
+    }
   }
 
   .btn-green:hover {
