--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -99,6 +99,12 @@ input[type='number'] {
   padding  : 0 .5em;
 }
 
+.daroog-sidebar {
+  .Mui-selected {
+    background-color: #b3e5fc !important;
+  }
+}
+
 @media print {
   .print-hide {
     display: none !important;
