Add rtl and vazir font to toastify

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -105,6 +105,10 @@ input[type='number'] {
   }
 }
 
+.Toastify__toast {
+  font-family: Vazir;
+}
+
 @media print {
   .print-hide {
     display: none !important;
