Fix enName font to no-farsi-number

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -106,8 +106,12 @@ input[type='number'] {
 }
 
 .Toastify__toast {
-  font-family: Vazir;
+  font-family  : Vazir;
   border-radius: .3em;
+}
+
+.no-farsi-number, .no-farsi-number .MuiInputBase-root {
+  font-family: VazirFontNumber !important;
 }
 
 @media print {
