--- a/src/crisp.css
+++ b/src/crisp.css
@@ -21,7 +21,7 @@ body .crisp-client .cc-kv6t .cc-7doi {
 body .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-ge4v,
 .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-unoo {
   left: 20px !important;
-  /* bottom: 32px !important; */
+   bottom: 32px !important; 
 }
 /* }
 @media only screen and (max-width: 599px) {
@@ -34,6 +34,20 @@ body .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-ge4v,
   }
 } */
 
+
+ @media only screen and (min-width: 600px) { 
+body .crisp-client .cc-kv6t[data-position-reverse=true] .cc-1xry .cc-ge4v, .crisp-client .cc-kv6t[data-position-reverse=true] .cc-1xry .cc-unoo {
+  right: auto!important;
+  left: 17px!important;
+  bottom: 39px !important;
+}
+
+}
+body .crisp-client .cc-kv6t[data-position-reverse=true][data-full-view=true] .cc-1xry .cc-unoo {
+  right: auto!important;
+  left: 17px!important;
+  bottom: 45px !important;
+}
 body
   .crisp-client
   .cc-kv6t[data-full-view='true'][data-last-operator-face='false']
