--- a/src/crisp.css
+++ b/src/crisp.css
@@ -17,36 +17,18 @@ body
 body .crisp-client .cc-kv6t .cc-7doi {
   background-color: transparent !important;
 }
-/* @media only screen and (min-width: 600px) { */
-body .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-ge4v,
-.crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-unoo {
+
+body .crisp-client .cc-kv6t .cc-1xry .cc-unoo {
+  bottom: 40px !important;
+}
+
+body .crisp-client .cc-kv6t[data-position-reverse='true'][data-full-view='true'] .cc-1xry .cc-unoo {
+  right: auto !important;
   left: 20px !important;
-   bottom: 32px !important; 
-}
-/* }
-@media only screen and (max-width: 599px) {
-  body .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-ge4v,
-  .crisp-client .cc-kv6t[data-position-reverse='true'] .cc-1xry .cc-unoo {
-    left: 180px !important;
-    top: 3px !important;
-    width: 32px !important;
-    height: 26px !important;
-  }
-} */
-
-
- @media only screen and (min-width: 600px) { 
-body .crisp-client .cc-kv6t[data-position-reverse=true] .cc-1xry .cc-ge4v, .crisp-client .cc-kv6t[data-position-reverse=true] .cc-1xry .cc-unoo {
-  right: auto!important;
-  left: 17px!important;
-  bottom: 39px !important;
-}
-
-}
-body .crisp-client .cc-kv6t[data-position-reverse=true][data-full-view=true] .cc-1xry .cc-unoo {
-  right: auto!important;
-  left: 17px!important;
   bottom: 45px !important;
+}
+body .crisp-client .cc-kv6t .cc-1xry .cc-ge4v .cc-qqzz .cc-5b24 .cc-19cg {
+  display: none !important;
 }
 body
   .crisp-client
