--- a/src/assets/scss/_print.scss
+++ b/src/assets/scss/_print.scss
@@ -1,8 +1,13 @@
 @media print {
+  .print-hide {
+    display: none !important;
+  }
+
   .bill-print {
-    border : 2px solid #444 !important;
-    padding: 1em;
-    margin : 2em;
+    border   : 1px solid #666 !important;
+    border-radius: 1em;
+    padding  : 1em;
+    margin   : 2em;
     direction: rtl;
 
     * {
@@ -10,20 +15,26 @@
     }
 
     .bill-print-header {
-      width      : 100%;
-      clear      : both;
-      font-weight: bold;
-      border-bottom: 1px solid gray;
-      margin-bottom: 1em;
+      width         : 100%;
+      clear         : both;
+      font-weight   : bold;
+      border-bottom : 1px solid gray;
+      margin-bottom : 1em;
       padding-bottom: 1em;
+
+      .bill-print-header-img {
+        text-align: left;
+
+        img {
+          height: 2em;
+        }
+      }
     }
   }
 }
 
 @media screen {
-
-  .print-hide,
   .bill-print-header {
-    display: none;
+    display: none !important;
   }
 }
