--- a/src/assets/scss/_print.scss
+++ b/src/assets/scss/_print.scss
@@ -34,6 +34,10 @@
 }
 
 @media screen {
+  .screen-hide {
+    display: none !important;
+  }
+
   .bill-print-header {
     display: none !important;
   }
