--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -109,6 +109,7 @@ input[type='number'] {
   font-family: Vazir;
   border-radius: 0.3em;
   padding-right: 1em;
+  min-height: 56px;
 
   .toast-message {
     padding-right: 1em;
