WIP TF-1079 - Add login count report
Need a clear btn and some polish

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -136,6 +136,10 @@ input[type='number'] {
   padding: 1em 2em
 }
 
+.margined-divider {
+  margin: 3em 0 !important;
+}
+
 @media print {
   .print-hide {
     display: none !important;
