WIP TF-1079 - Add login count report

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -140,6 +140,15 @@ input[type='number'] {
   margin: 3em 0 !important;
 }
 
+.spacing-3 {
+  margin: 3em;
+}
+
+.v-spacing-3 {
+  margin: 3em 0;
+}
+
+
 @media print {
   .print-hide {
     display: none !important;
