Resolve TF-1089 - Add allpharmacydrug report

--- a/src/assets/scss/_public.scss
+++ b/src/assets/scss/_public.scss
@@ -140,12 +140,20 @@ input[type='number'] {
   margin: 3em 0 !important;
 }
 
+.padding-2 {
+  padding: 2em;
+}
+
 .padding-3 {
   padding: 3em;
 }
 
 .spacing-3 {
   margin: 3em;
+}
+
+.spacing-2 {
+  margin: 2em;
 }
 
 .v-spacing-3 {
